
5.2a4 -> 5.2b1:
    - rse: RPM_VENDOR_OPENPKG: stick with local RPM sanity checking for reasonable warning messages
    - jbj: js: simplify the embedding to the JSAPI examples, not the js shell.
    - jbj: ficl: capture stdout from ficl vm.
    - jbj: ficl: wire-up %post -p <ficl>.
    - jbj: ficl: wire-up %{ficl:...}. capturing stdout todo++ ...
    - jbj: ficl: add a FICL interpreter wrapper.
    - jbj: js: wire-up %post -p <js>. much more todo++.
    - jbj: js: wire-up %{js:...}. much more todo++.
    - jbj: js: stub-in a javascript interpreter wrapper.
    - jbj: tcl: load and use $argv and $argc.
    - jbj: tcl: fix: don't append multiple newlines.
    - jbj: perl: load and use @ARGV. Note that shell $1 ends up in perl $ARGV[0]
    - jbj: ruby: load and use ARGV. Note that shell $1 ends up in ruby ARGV[0].
    - jbj: python: load and use sys.argv.
    - jbj: ruby: finish converting to WITH_RUBYEMBED.
    - jbj: use poptParseArgvString, not argvSplit, for shell arg escaping.
    - jbj: rework the embedded interpreter API's preparing to handle args.
    - jbj: permit args in PHP like %{python a b c:...} syntax.
    - jbj: map NULL interp to lazily instantiated globally persistent instance.
    - rse: RPM_CHECK_LIB: correctly handle library names like "libpython2.6" and "libdb-4.7"
    - rse: place XZ code under WITH_XZ (RPM_CHECK_LIB based) instead of HAVE_LZMA_H (standard Autoconf header check)
    - rse: place BZip2 code under WITH_BZIP2 (RPM_CHECK_LIB based) instead of HAVE_BZLIB_H (standard Autoconf header check)
    - rse: RPM_CHECK_LIB: support --with-<name>=system to enable a library but control detection via flags only
    - rse: let Lua's lregex_lposix to build against PCRE POSIX out of the box
    - jbj: inject $1/$2 into embedded tcl/perl/python/ruby interpreter contexts.
    - jbj: perl: add use RPM; so that perl bindings are available.

5.2a3 -> 5.2a4:
    - rse: fix building without BZip2