@@ -1,5 +1,6 @@
 
 5.2a4 -> 5.2b1:
+    - jbj: js: add a print method (swiped from SpiderMonkey js shell).
     - rse: RPM_VENDOR_OPENPKG: stick with local RPM sanity checking for reasonable warning messages
     - jbj: js: simplify the embedding to the JSAPI examples, not the js shell.
     - jbj: ficl: capture stdout from ficl vm.
